# snake-game

./: CMakeLists.txt  main.c
inc/: snake_game.h
src/: snake_game.c
